# CatBots-2.0

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: app.rs  main.rs
crates/core/agent/: Cargo.toml
crates/core/agent/src/: lib.rs  session_agent.rs  session_state.rs
crates/core/ai/: Cargo.toml
crates/core/ai/src/: ai_controller.rs  lib.rs  llm_client.rs
crates/core/history/: Cargo.toml
crates/core/history/src/: conversation_tree.rs  handler.rs  lib.rs  message.rs  node.rs  node_processor.rs  tag_integration.rs
crates/core/profile/: Cargo.toml
crates/core/profile/src/: lib.rs  model_parameters.rs  profile.rs  profile_manager.rs  storage.rs
crates/core/tag/: Cargo.toml
crates/core/tag/src/: audit.rs  inheritance.rs  lib.rs  lifecycle.rs  manager.rs  operator.rs  persistence.rs  registry.rs  storage.rs  types.rs  validator.rs
crates/infra/config/: Cargo.toml
crates/infra/config/src/: config_manager.rs  lib.rs
crates/infra/persistence/: Cargo.toml
crates/infra/persistence/src/: lib.rs  persistence_service.rs
crates/ui/terminal/: Cargo.toml
crates/ui/terminal/src/: command_parser.rs  lib.rs  terminal_ui.rs
