[package]
name = "catbots-ai"
version.workspace = true
edition.workspace = true

[dependencies]
catbots-history.workspace = true
catbots-profile.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
reqwest.workspace = true
